# sprCpp

sprMRI/BayesianSegmentation/: BayesianSegmentation.cxx  CMakeLists.txt
sprMRI/MultiAtlasVoting/: sprMultiAtlasVoting.cxx
